# hw2_c

./: .gitignore  CMakeLists.txt  README.md  generate_data.c  generator.c  main.c  test_multi  test_single
.github/workflows/: action.yml
include/: multi.h  single.h
lib/: CMakeLists.txt  install_manifest.txt
lib/include/: multi.h  single.h
lib/src/: common.c  multi.c  single.c
src/: multi.c  single.c
test/: test_multi.cpp  test_single.cpp
